k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-web
  namespace: default
spec:
  selector:
    app: devops-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
